--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        open_restaurants = []\n",
-    "        "
+    "        if restaurant"
    ]
   },
   {
