automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,9 @@
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']"
+    "        if restaurant['is_closed']\n",
+    "            None\n",
+    "        open_"
    ]
   },
   {
