--- a/index.ipynb
+++ b/index.ipynb
@@ -289,8 +289,7 @@
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']\n",
-    "            None\n",
-    "        open_"
+    "            None"
    ]
   },
   {
