--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if bool(restaurant['is_closed']) == False\n",
-    "            None"
+    "            open_restaurants.append"
    ]
   },
   {
