automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if bool(restaurant['is_closed']) == False\n",
-    "            open_restaurants.append"
+    "            open_restaurants.append(restaurant)"
    ]
   },
   {
