--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if bool(restaurant['is_closed']) == False\n",
-    "            open_restaurants.append(restaurant)"
+    "            open_restaurants.append(restaurant)\n",
+    "    return open_restaurants        "
    ]
   },
   {
