--- a/index.ipynb
+++ b/index.ipynb
@@ -281,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
-    "        if bool(restaurant['is_closed']) == False\n",
+    "        if bool(restaurant['is_closed']) == False:\n",
     "            open_restaurants.append(restaurant)\n",
     "    return open_restaurants        "
    ]
